DATAES-169: Trying GeoShape query

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.vividsolutions/jts -->
+        <dependency>
+            <groupId>com.vividsolutions</groupId>
+            <artifactId>jts</artifactId>
+            <version>1.13</version>
+        </dependency>
         
         <!-- CDI -->
         <dependency>
